Significant improvements and updates for the http://www.nmr-relax.com/windows_devel.html webpage.
The information was from 2006 and most links were dead.  This updates many of the sections of that
page.

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -54,15 +54,17 @@
     <ul>
      <li><a href="#svn_why">3.1 Why install?</a></li>
      <li><a href="#svn_download">3.2 Download</a></li>
-     <li><a href="#svn_install">3.3 Installation</a></li>
     </ul></li>
 
-    <li><a href="#vim">4. Vim</a>
+    <li><a href="#editor">4. Code editors</a>
     <ul>
-     <li><a href="#vim_why">4.1 Why install?</a></li>
-     <li><a href="#vim_download">4.2 Download</a></li>
-     <li><a href="#vim_install">4.3 Installation</a></li>
-     <li><a href="#vim_post_install">4.4 Post-install</a></li>
+     <li><a href="#vim">4.1 Vim</a>
+      <ul>
+       <li><a href="#vim_why">4.1.1 Why install?</a></li>
+       <li><a href="#vim_download">4.1.2 Download</a></li>
+       <li><a href="#vim_install">4.1.3 Installation</a></li>
+       <li><a href="#vim_post_install">4.1.4 Post-install</a></li>
+      </ul></li>
     </ul></li>
 
     <li><a href="#LaTeX">5. LaTeX</a>
@@ -102,19 +104,19 @@
 
    <div id="scons_why" class="main_h2">
     <h2>1.1 Why install?</h2>
-     <p>The <a href="http://www.scons.org/">SCons</a> build system was chosen over other build systems including '<em>make</em>' as it is a cross-platform build system which can be used in Unix, GNU/Linux, Mac OS X, and MS Windows.  Various components of the program relax can be created using the SCons utility.  This includes C module compilation, creation of the relax LaTeX manual, creation of the distribution packages, and cleaning up and removing certain files.  The file '<em>sconstruct</em>' in the base relax directory, which consists of python code, directs the operation of SCons for the various functions.  For example to compile the C modules, in the relax base directory type:</p>
+     <p>The <a href="http://www.scons.org/">SCons</a> build system was chosen over other build systems including '<em>make</em>' as it is a cross-platform build system which can be used in Unix, GNU/Linux, Mac OS X, and MS Windows.  Various components of the program relax can be created using the SCons utility.  This includes C module compilation, creation of the relax LaTeX manual, creation of the distribution packages, and cleaning up and removing certain files.  The file '<em>sconstruct</em>' in the base relax directory, which consists of Python code, directs the operation of SCons for the various functions.  For example to compile the C modules, in the relax base directory type:</p>
 
      <p><em>> scons</em></p>
 
-     <p>To compile the relax LaTeX manual (this requires the <a href="#LaTeX">installation of LaTeX</a>), type:</p>
+     <p>To compile the relax LaTeX manual as a PDF file, type:</p>
 
-     <p><em>> scons manual</em></p>
+     <p><em>> scons user_manual_pdf</em></p>
 
-     <p>To create the pre-compiled distribution packages for your platform (for MS Windows this requires the installation of <a href="#MSVS">MS Visual C++</a>, <a href="#LaTeX">LaTeX</a>, and <a href="#gpg">GnuPG</a>), type:</p>
+     <p>This requires the <a href="#LaTeX">installation of LaTeX</a>.  To create the pre-compiled distribution packages for your platform (for MS Windows this requires the installation of <a href="#MSVS">MS Visual Studio</a>, <a href="#LaTeX">LaTeX</a>, and <a href="#gpg">GnuPG</a>), type:</p>
 
      <p><em>> scons binary_dist</em></p>
 
-     <p>For additional uses of the SCons system, see the section of the relax manual titled 'The SCons build system' (<a href="http://download.gna.org/relax/manual/relax.pdf">PDF</a> or <a href="manual/relax.html">HTML</a> versions).</p>
+     <p>For additional uses of the SCons system, see the section of the relax manual titled <a href="manual/SCons_build_system.html">'The SCons build system'</a> (<a href="http://download.gna.org/relax/manual/relax.pdf">PDF</a> version).</p>
 
    </div>
 
@@ -126,7 +128,7 @@
 
    <div id="scons_install" class="main_h2">
     <h2>1.3 Installation</h2>
-     <p>After double clicking on the installation exe file, follow the instructions in the installation wizard.  The installation should automatically find the Python installation directory and install SCons there.</p>
+     <p>After double clicking on the installation EXE file, follow the instructions in the installation wizard.  The installation should automatically find the Python installation directory and install SCons there.</p>
 
    </div>
 
@@ -140,14 +142,12 @@
 
    <div id="MSVS_why" class="main_h2">
     <h2>2.1 Why install?</h2>
-     <p>Setting up this software will enable compilation of the relax C modules.  The compilation using the <a href='http://www.scons.org/'>SCons</a> cross platform compilation tool is described both on <a href="#scons">this page</a> and <a href="download.html#compilation">here</a>.</p>
+     <p>Setting up this software will enable compilation of the relax C modules.  The compilation using the <a href='http://www.scons.org/'>SCons</a> cross platform compilation tool is described both <a href="#scons">above</a> and on the <a href="download.html#compilation">download page</a>.</p>
    </div>
 
    <div id="MSVS_download" class="main_h2">
     <h2>2.2 Download</h2>
-     <p>The <a href="http://www.microsoft.com/visualstudio/eng/products/visual-studio-express-products">Express Edition of MS Visual Studio</a> is a cost-free download from the Microsoft website.  You will need to choose the version suitable for your operating system.  The download size for MS Visual Studio Express is anywhere between 500 Mb to 2 Gb and can be installed by two methods.  The first is to download and run the <a href="http://go.microsoft.com/fwlink/?LinkId=51410&amp;clcid=0x409">installation executable file</a> and then install the <a href="http://msdn.microsoft.com/vstudio/express/visualc/usingpsdk/">Microsoft Platform SDK</a>.</p>
-
-     <p>The second method is to download and burn a CD image containing all the software.  No additional software is required if installing from the CD image (ISO image).  The following is a list of handy links for downloading the different files for various MSVS versions (in English):</p>
+     <p>The <a href="http://www.microsoft.com/visualstudio/eng/products/visual-studio-express-products">Express edition of MS Visual Studio</a> is a cost-free download from the Microsoft website.  You will need to choose the version suitable for your operating system.  The download size for MS Visual Studio Express is anywhere between 500 Mb to 2 Gb, depending on the options selected, and can be installed by two methods.  The first is to download and run the installation executable file and then install the Microsoft Platform SDK.  The second method is to download and burn a CD or ISO image containing all the software.  No additional software is required if installing from the CD image.  The following is a list of links for downloading the different files for various MSVS versions, in English, directly from the Microsoft website:</p>
    </div>
 
 <table cellspacing="10">
@@ -192,7 +192,7 @@
 
       <em>c:\python24\include\pyconfig.h(130) : fatal error C1083: cannot open include file: 'basetsd.h': No such file or directory</em>
 
-      <p>If you encounter this problem, the solution is straightforward.  Simply change line 130 of the file '<em>include\pyconfig.h</em>', located in the base Python installation directory, from</p>
+      <p>If you encounter this problem, the solution is straightforward.  Simply change line 130 of the file '<em>include\pyconfig.h</em>' (the line number might be different for newer Python versions), located in the base Python installation directory, from</p>
 
       <em>#include &#060;basetsdh&#062;</em>
 
@@ -201,7 +201,7 @@
       <em>/* #include &#60;basetsdh&#62; */</em>
 
      <h3 id="MSVS_scons_issues">2.4.2 SCons issues (cannot find the MSVS compiler)</h3>
-      <p>For SCons versions &#060; 0.96.92 the following error may occur:</p>
+      <p>For very old SCons versions (&#060; 0.96.92) the following error may occur:</p>
 
       <em>'cl' is not recognized as an internal or external command, operable program or batch file.</em>
 
@@ -264,67 +264,55 @@
 
    <div id="svn_why" class="main_h2">
     <h2>3.1 Why install?</h2>
-     <p>The relax source code is kept within the relax Subversion <a href="http://gna.org/svn/?group=relax">repository</a>.  After installing <a href="http://subversion.tigris.org/">Subversion</a>, you are then able to check out code directly from the repository.  For example to check out the code from the 1.2 line and place it in the directory '<em>relax</em>', type:</p>
+     <p>The relax source code is kept within the relax Subversion <a href="http://gna.org/svn/?group=relax">repository</a>.  After installing <a href="http://subversion.apache.org/">Subversion</a>, you are then able to check out code directly from the repository.  For example to check out the code from the relax trunk, type:</p>
 
-     <p><em>> svn co http://svn.gna.org/svn/relax/1.2 relax</em></p>
+     <p><em>> svn co http://svn.gna.org/svn/relax/relax-trunk</em></p>
 
    </div>
 
    <div id="svn_download" class="main_h2">
-    <h2>3.2 Download</h2>
-     <p>The current version of <a href="http://subversion.tigris.org/">Subversion</a>, as of October 2006, is 1.4.0.  The MS Windows installation file is <a href="http://subversion.tigris.org/files/documents/15/34093/svn-1.4.0-setup.exe">svn-1.4.0-setup.exe</a>.  Please visit the <a href="http://subversion.tigris.org/project_packages.html">download site</a> for newer versions.</p>
-
-   </div>
-
-   <div id="svn_install" class="main_h2">
-    <h2>3.3 Installation</h2>
-     <p>After double clicking on the installation exe file, follow the instructions in the installation wizard.</p>
+    <h2>3.2 Download and installation</h2>
+      <p>The MS Windows installation files are provided by <a href="http://subversion.apache.org/packages.html#windows">numerous third parties</a> rather than being directly supplied by the subversion project.  Installation is slightly different for each package but is simple enough.  You can choose the provider as you wish, but <a href="http://www.sliksvn.com/en/download">SlikSVN</a> is recommended as it will provide all the tools you will need and does not require registration.</p>
 
    </div>
 
  </div>
 <!-- SVN fin -->
 
-<!-- Vim -->
- <div id="vim" class="main_box">
-   <h1>4. Vim</h1>
+<!-- Editor -->
+ <div id="editor" class="main_box">
+   <h1>4. Code editors</h1>
+     <div id="vim" class="main_h2">
 
-   <div id="vim_why" class="main_h2">
-    <h2>4.1 Why install?</h2>
-     <p><a href="http://www.vim.org/">Vim</a> is a powerful text editor which can be used to edit the relax source code.  The programs Notepad or Wordpad should not be used to edit the relax source code as tabs are not translated into 4 spaces.  Blocks of Python code should be indented using four spaces (the Python convention).  The combination of tabs and spaces will cause relax to fail.</p>
+     <h2>4.1 Vim</h2>
 
-     <p>Vim's graphical interface is accessible through the <em>gvim</em> program (this is installed with the rest of Vim).  If you have never used <a href="http://www.vim.org/">Vim</a> or the <em>vi</em> programs before, understanding how the program works can take a while.  A tutorial is installed together with the program and is available through the program <em>vimtutor</em>.</p>
-   </div>
+      <h3 id="vim_why">4.1.1 Why install?</h3>
+       <p><a href="http://www.vim.org/">Vim</a> is a powerful text editor which can be used to edit the relax source code.  The programs Notepad or Wordpad should not be used to edit the relax source code as tabs are not translated into 4 spaces.  Blocks of Python code should be indented using four spaces (the Python convention).  The combination of tabs and spaces will cause relax to fail.</p>
 
-   <div id="vim_download" class="main_h2">
-    <h2>4.2 Download</h2>
-     <p>The current version of <a href="http://www.vim.org/">Vim</a>, as of October 2006, is 7.0.  The MS Windows installation file is <a href="ftp://ftp.vim.org/pub/vim/pc/gvim70.exe">gvim70.exe</a>.  Please visit the Vim <a href="http://www.vim.org/download.php">download site</a> for newer versions.</p>
+       <p>Vim's graphical interface is accessible through the <em>gvim</em> program (this is installed with the rest of Vim).  If you have never used <a href="http://www.vim.org/">Vim</a> or the <em>vi</em> programs before, understanding how the program works can take a while.  A tutorial is installed together with the program and is available through the program <em>vimtutor</em>.</p>
 
-   </div>
+      <h3 id="vim_download">4.1.2 Download</h3>
+       <p>The current version of <a href="http://www.vim.org/">Vim</a>, as of October 2006, is 7.0.  The MS Windows installation file is <a href="ftp://ftp.vim.org/pub/vim/pc/gvim70.exe">gvim70.exe</a>.  Please visit the Vim <a href="http://www.vim.org/download.php">download site</a> for newer versions.</p>
 
-   <div id="vim_install" class="main_h2">
-    <h2>4.3 Installation</h2>
-     <p>After double clicking on the installation exe file, follow the instructions in the installation wizard.</p>
+      <h3 id="vim_install">4.1.3 Installation</h3>
+       <p>After double clicking on the installation EXE file, follow the instructions in the installation wizard.</p>
 
-   </div>
+      <h3 id="vim_post_install">4.1.4 Post-install</h3>
+       <p>The Vim configuration file should be modified prior to editing relax's source code.  The configuration file for MS Windows is called '<em>_vimrc</em>' and is located in the Vim installation directory (which in the default setup is '<em>C:\Program Files\Vim\_vimrc</em>').  To the end of this file, add the following lines:</p>
 
-   <div id="vim_post_install" class="main_h2">
-    <h2>4.4 Post-install</h2>
-     <p>The Vim configuration file should be modified prior to editing relax's source code.  The configuration file for MS Windows is called '<em>_vimrc</em>' and is located in the Vim installation directory (which in the default setup is '<em>C:\Program Files\Vim\_vimrc</em>').  To the end of this file, add the following lines:</p>
+       <ul class='code_ul'>
+        <li>set nobackup</li>
+        <li>set tabstop=4</li>
+        <li>set shiftwidth=4</li>
+        <li>set expandtab</li>
+        <li>set lbr</li>
+       </ul>
 
-     <ul class='code_ul'>
-      <li>set nobackup</li>
-      <li>set tabstop=4</li>
-      <li>set shiftwidth=4</li>
-      <li>set expandtab</li>
-      <li>set lbr</li>
-     </ul>
-
-     <p>The <em>nobackup</em> command stops gvim from creating backup files (files ending in ~).  The <em>tabstop</em>, <em>shiftwidth</em>, and <em>expandtab</em> commands are for setting up the correct indentation for the relax source code.  The command <em>lbr</em> enables word wrap in the program.</p>
-   </div>
+       <p>The <em>nobackup</em> command stops gvim from creating backup files (files ending in ~).  The <em>tabstop</em>, <em>shiftwidth</em>, and <em>expandtab</em> commands are for setting up the correct indentation for the relax source code.  The command <em>lbr</em> enables word wrap in the program.</p>
+     </div>
 
  </div>
-<!-- Vim fin -->
+<!-- Editor fin -->
 
 
 <!-- LaTeX -->
@@ -389,7 +377,7 @@
 
    <div id="gpg_install" class="main_h2">
     <h2>6.3 Installation</h2>
-     <p>The installation of <a href="http://www.gpg4win.org/">gpg4win</a> is straight forward.  Just follow the instructions given by the installation wizard after double clicking on the installation exe file.</p>
+     <p>The installation of <a href="http://www.gpg4win.org/">gpg4win</a> is straight forward.  Just follow the instructions given by the installation wizard after double clicking on the installation EXE file.</p>
    </div>
 
    <div id="gpg_post_install" class="main_h2">
