Fix for the "svn co" command on the http://www.nmr-relax.com/windows_devel.html webpage.

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -264,9 +264,9 @@
 
    <div id="svn_why" class="main_h2">
     <h2>3.1 Why install?</h2>
-     <p>The relax source code is kept within the relax Subversion <a href="http://gna.org/svn/?group=relax">repository</a>.  After installing <a href="http://subversion.apache.org/">Subversion</a>, you are then able to check out code directly from the repository.  For example to check out the code from the relax trunk, type:</p>
+     <p>The relax source code is kept within the relax Subversion <a href="http://gna.org/svn/?group=relax">repository</a>.  After installing <a href="http://subversion.apache.org/">Subversion</a>, you are then able to check out code directly from the repository.  For example to check out the code from the relax trunk, one can type:</p>
 
-     <p><em>> svn co http://svn.gna.org/svn/relax/relax-trunk</em></p>
+     <p><em>> svn co http://svn.gna.org/svn/relax/trunk relax-trunk</em></p>
 
    </div>
 
