Added a section to the FAQ about missing menu items (http://www.nmr-relax.com/faq.html).

--- a/faq.html
+++ b/faq.html
@@ -30,6 +30,7 @@
     <li><a href="faq.html#source_code">How do I obtain the newest relax source code?</a></li>
     <li><a href="faq.html#source_code_branch">How do I check out a relax source code branch?</a></li>
     <li><a href="faq.html#radian_units">The equations (or units) used by relax are incorrect!</a></li>
+    <li><a href="faq.html#missing_icons">The menu icons are missing in Linux.</a></li>
     </ul>
   </div>
 
@@ -57,6 +58,11 @@
       <p>This is more a commonly stated point rather than a question.  But if you believe that NMR relaxation data should be measured in Hertz, that the molecular correlation times or internal correlation times do not contain radian units, that the units for spherical harmonics is not radians, or that the rotation power spectral density functions do not contain radian units, the following links are for you.</p>
       <p>Radians are a dimensionless and hidden unit ubiquitous to NMR.  A <a href="http://permalink.gmane.org/gmane.science.nmr.relax.user/723">detailed description of this hidden radian unit as used in NMR</a> has been written as reference for understanding the unit in the context of the SI system.  Copies of this description can also be found <a href="http://marc.info/?l=relax-users&amp;m=135070801026465&amp;w=2">here</a>, <a href="https://mail.gna.org/public/relax-users/2009-01/msg00000.html">here</a> or <a href="http://www.mail-archive.com/relax-users@gna.org/msg00582.html">here</a>.</p>
       <p>A <a href="http://permalink.gmane.org/gmane.science.nmr.relax.devel/1034">detailed derivation in the context of Abragam's relaxation equations</a> may also help.  Copies of this derivation can be found <a href="https://mail.gna.org/public/relax-devel/2007-06/msg00012.html">here</a> or <a href="http://www.mail-archive.com/relax-devel@gna.org/msg00975.html">here</a> as well.</p>
+
+     <h3 id="missing_icons">The menu icons are missing in Linux.</h3>
+
+      <p>On some Linux systems, the icons for the menu items are not shown.  This was a decision taken by the Gnome developers at some point to keep the GUI minimal, though in recent versions this behaviour has been reverted.  If you suffer from this problem, to reactive the icons simply type in the shell:</p>
+      <p><em>$ gconftool-2 --type boolean --set /desktop/gnome/interface/menus_have_icons true</em></p>
 
   </div>
 
