Added the relax wiki site (http://wiki.nmr-relax.com) to the menu of all pages of http://www.nmr-relax.com.

--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,7 @@
     <li class="menu_def"><a href="http://www.nmr-relax.com/events.html" title="The material related to events publicizing relax">Events</a></li>
     <li class="menu_def"><a href="http://www.nmr-relax.com/refs.html" title="References for the program relax">References</a></li>
     <li class="menu_def"><a href="http://www.nmr-relax.com/links.html" title="Where to find relax on the web, and other links">Links</a></li>
+    <li class="menu_def"><a href="http://wiki.nmr-relax.com/" title="The relax wiki">Wiki</a></li>
 
     <li class="menu_title">relax @ Gna!</li>
     <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
