--- a/download.html
+++ b/download.html
@@ -107,7 +107,7 @@
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a  href="http://www.python.org/ftp/python/2.7.5/Python-2.7.5.tar.bz2">Python-2.7.5.tar.bz2</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/download/releases/2.7.5/">Python 2.7.5 release page</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
@@ -143,7 +143,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/ftp/python/2.7.5/python-2.7.5.msi">python-2.7.5.msi</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/download/releases/2.7.5/">Python 2.7.5 release page</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="https://launchpad.net/pyreadline/+download">pyreadline downloads</a></li>
@@ -203,7 +203,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/ftp/python/2.7.5/python-2.7.5-macosx10.3.dmg">python-2.7.5-macosx10.3.dmg</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5: <a href="http://www.python.org/download/releases/2.7.5/">Python 2.7.5 release page</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
