--- a/download.html
+++ b/download.html
@@ -66,6 +66,8 @@
 
       <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
 
+      <p>Note that only the official Python distribution from <a href="http://python.org">python.org</a> is supported.  If you use the Enthought Python Distribution (EPD) or other non-official distributions you may encounter problems with the relax C modules, the graphical user interface, or other issues.  These alternative distributions are to be used at your own risk and any bugs encountered will not be considered as relax bugs.</p>
+
       <h4>wxPython</h4>
 
       <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.</p>
