Added the relax 3.0 series menu entry to http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -41,6 +41,7 @@
     <li><a href="download.html#New_releases">New releases</a></li>
     <li><a href="download.html#All_releases">All releases</a>
      <ul>
+      <li><a href="download.html#series_3.0">3.0 series</a></li>
       <li><a href="download.html#series_2.2">2.2 series</a></li>
       <li><a href="download.html#series_2.1">2.1 series</a></li>
       <li><a href="download.html#series_2.0">2.0 series</a></li>
