Changed the API documentation link in the side menu for http://www.nmr-relax.com.

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     <li class="menu_def"><a href="http://www.nmr-relax.com/manual/index.html" title="The relax HTML user manual">User manual</a> (<a href="http://download.gna.org/relax/manual/relax.pdf" title="The relax PDF user manual">PDF</a>)</li>
     <li class="menu_def"><a href="http://www.nmr-relax.com/download.html" title="Instructions for downloading relax">Download</a></li>
     <li class="menu_def"><a href="http://www.nmr-relax.com/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/api/" title="The API documentation">The relax internals</a></li>
+    <li class="menu_def"><a href="http://www.nmr-relax.com/api/" title="The relax internals for power users">The relax API documentation</a></li>
     <li class="menu_def"><a href="http://www.nmr-relax.com/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></li>
     <li class="menu_def"><a href="http://www.nmr-relax.com/devel_platform.html" title="Setting up a development platform">Development platform setup</a></li>
     <li class="menu_def"><a href="http://www.nmr-relax.com/events.html" title="The material related to events publicizing relax">Events</a></li>
