Added relaxation dispersion as an analysis type to http://www.nmr-relax.com.
This is for the main page at http://www.nmr-relax.com as well as the relax features page at
http://www.nmr-relax.com/features.html.

--- a/features.html
+++ b/features.html
@@ -69,6 +69,7 @@
      <li>The frame order theory.</li>
      <li>Conformational analysis of paramagnetically tagged sugars via the N-state model (<a href="refs.html#Erdelyi11">Erdelyi11</a>).</li>
      <li>Analysis and comparison of ensembles of structures using RDCs, PCSs, NOEs, etc. (the N-state model of dynamics).</li>
+     <li>The analysis of <a href="http://www.nmr-relax.com/analyses/relaxation_dispersion.html">Relaxation dispersion</a> data.</li>
     </ul>
 
   </div>
