Added a javascript function for enabling a collapsible menu.
This will be used for the side menu.

--- a/head.html
+++ b/head.html
@@ -23,4 +23,18 @@
     })();
 
   </script>
+
+  <!--Collapsible menu JS -->
+  <script type="text/javascript">
+
+    function collapseMenu(object_id) {
+      if (!document.getElementById) return;
+
+      var obj = document.getElementById(object_id).style;
+      obj.display = (obj.display == 'block')?'none': 'block';
+    }
+
+  </script>
+
+
   <!-- End SSI head element -->
