--- a/menu.html
+++ b/menu.html
@@ -1,34 +1,34 @@
 <!-- SSI side menu -->
 <div class="menu">
-  <ul class="menu_ul">
-    <li class="menu_header">The relax menu</li>
+  <div class="menu_header">The relax menu</div>
+  <div class="menu_title">relax</div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com" title="Go to the relax home page">Main page</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/features.html" title="A listing of relax's features">Features</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/screenshots.html" title="relax UI screenshots">Screenshots</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/manual/index.html" title="The relax HTML user manual">User manual</a> (<a href="http://download.gna.org/relax/manual/relax.pdf" title="The relax PDF user manual">PDF</a>)</div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/download.html" title="Instructions for downloading relax">Download</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/api/" title="The relax internals for power users">The relax API documentation</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/devel_platform.html" title="Setting up a development platform">Development platform setup</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/events.html" title="The material related to events publicizing relax">Events</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/refs.html" title="References for the program relax">References</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/links.html" title="Where to find relax on the web, and other links">Links</a></div>
+  <div class="menu_def"><a href="http://wiki.nmr-relax.com/" title="The relax wiki">Wiki</a></div>
 
-    <li class="menu_title">relax</li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com" title="Go to the relax home page">Main page</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/features.html" title="A listing of relax's features">Features</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/screenshots.html" title="relax UI screenshots">Screenshots</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/manual/index.html" title="The relax HTML user manual">User manual</a> (<a href="http://download.gna.org/relax/manual/relax.pdf" title="The relax PDF user manual">PDF</a>)</li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/download.html" title="Instructions for downloading relax">Download</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/api/" title="The relax internals for power users">The relax API documentation</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/devel_platform.html" title="Setting up a development platform">Development platform setup</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/events.html" title="The material related to events publicizing relax">Events</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/refs.html" title="References for the program relax">References</a></li>
-    <li class="menu_def"><a href="http://www.nmr-relax.com/links.html" title="Where to find relax on the web, and other links">Links</a></li>
-    <li class="menu_def"><a href="http://wiki.nmr-relax.com/" title="The relax wiki">Wiki</a></li>
+  <div class="menu_title">relax @ Gna!</div>
+  <div class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></div>
+  <div class="menu_def"><a href="http://download.gna.org/relax" title="The Gna! download site for the project relax.">Downloads</a></div>
+  <div class="menu_def"><a href="http://gna.org/news/?group=relax" title="The relax news page.">News</a></div>
+  <div class="menu_def"><a href="https://gna.org/bugs/?group=relax" title="The relax bug tracker.">Bug tracker</a></div>
+  <div class="menu_def"><a href="http://gna.org/task/?group=relax" title="The relax task tracker.">Tasks</a></div>
+  <div class="menu_def"><a href="http://gna.org/support/?group=relax" title="The relax support request tracker.">Support requests</a></div>
+  <div class="menu_def"><a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a></div>
+  <div class="menu_def"><a href="http://gna.org/mail/?group=relax" title="The relax mailing lists.">Mailing lists</a></div>
+  <div class="menu_def"><a href="http://gna.org" title="The Gna! website.">Gna!</a></div>
 
-    <li class="menu_title">relax @ Gna!</li>
-    <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
-    <li class="menu_def"><a href="http://download.gna.org/relax" title="The Gna! download site for the project relax.">Downloads</a></li>
-    <li class="menu_def"><a href="http://gna.org/news/?group=relax" title="The relax news page.">News</a></li>
-    <li class="menu_def"><a href="https://gna.org/bugs/?group=relax" title="The relax bug tracker.">Bug tracker</a></li>
-    <li class="menu_def"><a href="http://gna.org/task/?group=relax" title="The relax task tracker.">Tasks</a></li>
-    <li class="menu_def"><a href="http://gna.org/support/?group=relax" title="The relax support request tracker.">Support requests</a></li>
-    <li class="menu_def"><a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a></li>
-    <li class="menu_def"><a href="http://gna.org/mail/?group=relax" title="The relax mailing lists.">Mailing lists</a></li>
-    <li class="menu_def"><a href="http://gna.org" title="The Gna! website.">Gna!</a></li>
+</div>
 
   </ul>
 </div>
