--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -14,22 +14,24 @@
 
 <head>
   <title>relax - software for the analysis of NMR relaxation dispersion data</title>
-  <!--#include virtual="head.html" -->
+  <!--#include virtual="../head.html" -->
   <meta name="keywords" content="Software, NMR, relaxation data, relaxation dispersion." />
 </head>
 
 <body>
 
-<!--#include virtual="header.html" -->
-<!--#include virtual="menu.html" -->
+<!--#include virtual="../header.html" -->
+<!--#include virtual="../menu.html" -->
 
 <div class="main">
   <div class="main_box">
     <h1>Relaxation dispersion analysis.</h1>
 
+      <p>The analysis of NMR relaxation dispersion data is supported by relax.  This page is currently under construction, as the dispersion analysis has not been officially released yet.</p>
+
   </div>
 </div>
 
-<!--#include virtual="footer.html" -->
+<!--#include virtual="../footer.html" -->
 </body>
 </html>
