Small expansion of the http://www.nmr-relax.com/analyses/relaxation_dispersion.html webpage.

--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -25,9 +25,9 @@
 
 <div class="main">
   <div class="main_box">
-    <h1>Relaxation dispersion analysis.</h1>
+    <h1>Relaxation dispersion analysis</h1>
 
-      <p>The analysis of NMR relaxation dispersion data is supported by relax.  This page is currently under construction, as the dispersion analysis has not been officially released yet.</p>
+      <p>The analysis of NMR relaxation dispersion data is supported by relax.  This page is currently under construction, as the dispersion analysis has not been officially released yet.  Until then, please see the <a href="http://wiki.nmr-relax.com/Category:Relaxation_dispersion">relaxation dispersion category of the relax wiki</a>.</p>
 
   </div>
 </div>
