Updated the side menu of the http://www.nmr-relax.com webpages.
The user manual is now a collapsible submenu opening up links for the PDF
(http://download.gna.org/relax/manual/relax.pdf) and HTML (http://www.nmr-relax.com/manual/index.html)
versions of the manual.

--- a/menu.html
+++ b/menu.html
@@ -5,14 +5,20 @@
   <div class="menu_def"><a href="http://www.nmr-relax.com" title="Go to the relax home page">Main page</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/features.html" title="A listing of relax's features">Features</a></div>
 
-  <div class="menu_def_collapsable" onclick="collapseMenu('analysis_menu')">Supported analyses</div>
-    <div id="analysis_menu" class="submenu">
+  <div class="menu_def_collapsable" onclick="collapseMenu('analysis_submenu')">Supported analyses</div>
+    <div id="analysis_submenu" class="submenu">
       <a class="submenu_def" href="http://www.nmr-relax.com/analyses/relaxation_dispersion.html">Relaxation dispersion</a>
     </div>
 
   <div class="menu_def"><a href="http://www.nmr-relax.com/screenshots.html" title="relax UI screenshots">Screenshots</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></div>
-  <div class="menu_def"><a href="http://www.nmr-relax.com/manual/index.html" title="The relax HTML user manual">User manual</a> (<a href="http://download.gna.org/relax/manual/relax.pdf" title="The relax PDF user manual">PDF</a>)</div>
+
+  <div class="menu_def_collapsable" onclick="collapseMenu('manual_submenu')">User manual</div>
+    <div id="manual_submenu" class="submenu">
+       <a class="submenu_def" href="http://download.gna.org/relax/manual/relax.pdf" title="The relax PDF user manual">PDF user manual</a>
+       <a class="submenu_def" href="http://www.nmr-relax.com/manual/index.html" title="The relax HTML user manual (lower quality than the PDF)">HTML user manual</a>
+    </div>
+
   <div class="menu_def"><a href="http://www.nmr-relax.com/download.html" title="Instructions for downloading relax">Download</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/api/" title="The relax internals for power users">The relax API documentation</a></div>
